--- a/css/style.css
+++ b/css/style.css
@@ -9,3 +9,62 @@
     --negro-8: rgba(0, 0, 0, 0.08);
     --gunmental: #54585a;
 }
+
+
+/* SECTION 3: Fortalezas Debilidades*/
+
+/* 
+
+FUENTES para añadir a :root
+
+font-family: 'Open Sans', sans-serif;
+font-family: 'Rubik', sans-serif;
+
+*/
+
+/* 
+
+Reset (Lo he usado para crear la sección, ahora lo dejo comentado por si acaso! 
+ * {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+} 
+
+- He trabajado los tamaños de fuente con rem, teniendo en cuenta que añadiremos a :root { font-size: 62.5%;}
+
+*/
+
+.fort-deb {
+    display: flex;
+    flex-flow: column wrap; /* Para tablet será row wrap */
+    background-color: rgba(184, 184, 185, 0.2); /* Cambiar variable --cool-grey, le falta opacidad 0.2 */
+    text-align: center;
+}
+
+.fortalezas, .debilidades {
+    margin-top: 30px;
+    margin-left: var(--margin);
+    margin-right: var(--margin);
+}
+
+.debilidades {
+    margin-bottom: 45px;
+}
+
+.fortalezas__title, .debilidades__title {
+    font-size: 2.2rem;
+    color: var(--brand_color);
+    font-weight: 500;
+    line-height: 2.05;
+}
+
+.fortalezas__content, .debilidades__content {
+    font-size: 1.6rem;
+    color: var(--gunmental);
+    line-height: 1.5;
+}
+
+
+
+ 
