--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,7 @@
 
 .fortalezas__title, .debilidades__title {
     font-size: 2.2rem;
+    font-family: var(--primary-font);
     color: var(--brand_color);
     font-weight: 500;
     line-height: 2.05;
@@ -66,6 +67,7 @@
 
 .fortalezas__content, .debilidades__content {
     font-size: 1.6rem;
+    font-family: var(--secondary-font);
     color: var(--gunmental);
     line-height: 1.5;
 }
