--- a/css/style.css
+++ b/css/style.css
@@ -9,3 +9,39 @@
     --negro-8: rgba(0, 0, 0, 0.08);
     --gunmental: #54585a;
 }
+.header {
+    background-color: var(--brand_color);
+    width: 100%;
+    height: 60px;
+    opacity: 0,95;
+    position: fixed; 
+}
+.titulo {
+   color: var(--blanco);
+   font-size: 16px;
+   width: 400px;
+   padding: 20px 80px 20px 80px;
+}
+.navegacion {
+    background-color: var(--brandsecundario_color);
+    opacity: 0,90;
+    width: 100%;
+    height: 50px;
+}
+.lista_superior {
+    list-style: none;
+    color: var(--blanco);
+    display: flex;
+    justify-content: space-between;
+    padding: 15px 10px 15px 10px;
+    
+    
+}
+.footer {
+    width: 100%;
+    background-color: #fff;
+    border: 1px solid;
+    border-color: var(--cool-grey);
+    position: absolute;
+    bottom: -50px;
+}
