--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,55 @@
-:root {
-    --margin: 15px;
-    --brand_color: #099d8d;
-    --brandsecundario_color: #14d9c4;
-    --negro: black;
-    --light-grey-blue: rgba(184,184,185,0.1);
-    --blanco: #fff;
-    --cool-grey: #b8b8b9;
-    --negro-8: rgba(0, 0, 0, 0.08);
-    --gunmental: #54585a;
+
+.hero{
+    width: 100%;
+    position: relative;
+    display: inline;
+    text-align: center;
+
+   }
+
+.hero-content{
+    width: 100%;
+    height: 90vh;
+    background-image: url(../imagenes/titanic.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+
+
 }
+    
+
+.Lorem-ipsum {
+    width: 260px;
+    height: 80px;
+    font-family: OpenSans;
+    font-size: 1.125rem;
+    font-weight: 600;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.39;
+    letter-spacing: normal;
+    color: var(--negro);
+    position: absolute;
+    bottom: 0;
+    transform: translate(-50%, 50%);
+    z-index: 1;
+    background-color: white;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
