--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,8 @@
     display: flex;
     flex-direction: column;
     height: auto;
+    padding-left: var(--margin);
+    padding-right: var(--margin);
 }
 
 .about-us--title {
@@ -87,7 +89,7 @@
     line-height: 4.5rem;
     font-family: var(--primary-font);
     text-align: center;
-    margin-top: 30px;
+    margin: 30px;
     margin-bottom: 30px;
 
 }
@@ -118,8 +120,8 @@
     text-align: center;
 }
 .about-us--description {
-    width: 290px;
-    height: 200px;
+    /* width: 290px;
+    height: 200px; */
     font-family: var(--secondary-font);
     color:var(--gunmental);
     line-height: 2.4rem;
@@ -144,41 +146,48 @@
     flex-direction: row;
     align-items: center;
     margin-bottom: 67px;
+    margin-left: 45px;
+    margin-right: 45px;
 } 
 
 .about-us--info{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    width: 205px;
-    height: 205px;
     margin-left: 31px;
 }
 
 .about-us--description {
     text-align: left;
-    width: 443px;
-    height: 122px;
 }
 
 .about-us--article img{
     width: 205px;
     height:205px ;
     border-radius:10px;
-    border: 5px solid var(--negro-8)  ;
-    
+    border: 5px solid var(--negro-8) ;
 }
 .about-us__right{
     display: flex;
     flex-direction: row-reverse;
     justify-content: flex-start;
-
-
 } 
-.about-us__article--info{
-    margin-right: 281px; 
-    display: flex;
-    flex-direction: c;
+.about-us__right--info{
+    align-items: flex-end;
+    margin-right: 31px;
 }
-
+.about-us__right--description{
+    text-align: right;
+}
+}
+/*DESKTOP*/
+@media screen and (min-width : 1200px) {
+.about-us--article{
+    margin-left: 138px;
+    margin-right: 138px;
+}
+.about-us--article img{
+    width: 278px;
+    height:278px ;
+}
 }
