--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
-*{
-    margin:0;
-    padding:0;
+* {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
@@ -10,7 +10,7 @@
     --brand_color: #099d8d;
     --brandsecundario_color: #14d9c4;
     --negro: black;
-    --light-grey-blue: rgba(184,184,185,0.1);
+    --light-grey-blue: rgba(184, 184, 185, 0.1);
     --blanco: #fff;
     --cool-grey: rgba(184, 184, 185, 0.2);
     --negro-8: rgba(0, 0, 0, 0.08);
@@ -18,13 +18,14 @@
     --primary-font: 'Rubik', sans-serif;
     --secondary-font: 'Open Sans', sans-serif;
 }
-/* HEADER*/ 
+
+/* HEADER*/
 .header {
     background-color: var(--brand_color);
     width: 100%;
-    height: 60px;
-    opacity: 0, 95;
-    position: fixed;
+    height: 70px;
+    position: relative;
+    opacity: .9;
 }
 
 .titulo {
@@ -32,11 +33,12 @@
     font-size: 16px;
     width: 400px;
     padding: 20px 80px 20px 80px;
+    font-family: var(--secondary-font);
+    font-weight: 500;
 }
 
 .navegacion {
     background-color: var(--brandsecundario_color);
-    opacity: 0, 90;
     width: 100%;
     height: 50px;
 }
@@ -47,16 +49,17 @@
     display: flex;
     justify-content: space-between;
     padding: 15px 10px 15px 10px;
+    font-family: var(--secondary-font);
+    font-size: 15px;
 }
 
-*/seccion2 inicio*/
-.inicio {
+*/seccion2 inicio*/ .inicio {
     background-color: var(--blanco);
     width: 320px;
     height: 504px;
     padding: 30px 15px;
     display: flex;
-    flex-direction: column;  
+    flex-direction: column;
 }
 
 .titulo-inicio {
@@ -64,21 +67,25 @@
     text-align: center;
     margin: 10px;
     margin: 15px 0 0;
-    line-height: 1.5;  
+    line-height: 1.5;
 }
-.inicio-texto {  
+
+.inicio-texto {
     text-align: center;
 }
+
 /* SECTION 3: Fortalezas Debilidades*/
 
 .fort-deb {
     display: flex;
-    flex-flow: column wrap; /* Para tablet será row wrap */
+    flex-flow: column wrap;
+    /* Para tablet será row wrap */
     background-color: var(--cool-grey);
     text-align: center;
 }
 
-.fortalezas, .debilidades {
+.fortalezas,
+.debilidades {
     margin-top: 30px;
     margin-left: var(--margin);
     margin-right: var(--margin);
@@ -88,7 +95,8 @@
     margin-bottom: 45px;
 }
 
-.fortalezas__title, .debilidades__title {
+.fortalezas__title,
+.debilidades__title {
     font-size: 2.2rem;
     font-family: var(--primary-font);
     color: var(--brand_color);
@@ -96,7 +104,8 @@
     line-height: 2.05;
 }
 
-.fortalezas__content, .debilidades__content {
+.fortalezas__content,
+.debilidades__content {
     font-size: 1.6rem;
     font-family: var(--secondary-font);
     color: var(--gunmental);
@@ -113,7 +122,7 @@
 
 .about-us--title {
     width: 100%;
-    color:var(--brand_color);
+    color: var(--brand_color);
     font-size: 2.4rem;
     line-height: 4.5rem;
     font-family: 'Rubik', sans-serif;
@@ -122,41 +131,46 @@
     margin-bottom: 30px;
 
 }
-.about-us--article{
+
+.about-us--article {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.about-us--article img{
+.about-us--article img {
     width: 180px;
-    height:180px ;
-    border-radius:10px;
-    border: 5px solid var(--negro-8)  ;
+    height: 180px;
+    border-radius: 10px;
+    border: 5px solid var(--negro-8);
 
 }
-.about-us--info{
+
+.about-us--info {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+
 .about-us--name {
-    margin-top:15px;
-    color:var(--negro);
+    margin-top: 15px;
+    color: var(--negro);
     font-size: 2.0rem;
     line-height: 4.5rem;
     font-family: 'Open Sans', sans-serif;
     text-align: center;
 }
+
 .about-us--description {
     width: 290px;
     height: 200px;
     font-family: 'Open Sans', sans-serif;
-    color:var(--gunmental);
+    color: var(--gunmental);
     line-height: 2.4rem;
     font-size: 1.6rem;
     text-align: center;
 }
+
 .about-us--rrss {
     width: 124px;
     height: 30px;
@@ -170,66 +184,60 @@
 
 /* TABLET */
 @media screen and (min-width : 768px) {
-.about-us--article{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin-bottom: 67px;
-} 
+    .about-us--article {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        margin-bottom: 67px;
+    }
 
-.about-us--info{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    width: 205px;
-    height: 205px;
-    margin-left: 31px;
+    .about-us--info {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        width: 205px;
+        height: 205px;
+        margin-left: 31px;
+    }
+
+    .about-us--description {
+        text-align: left;
+        width: 443px;
+        height: 122px;
+    }
+
+    .about-us--article img {
+        width: 205px;
+        height: 205px;
+        border-radius: 10px;
+        border: 5px solid var(--negro-8);
+
+    }
+
+    .about-us__right {
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: flex-start;
+
+
+    }
+
+    .about-us__article--info {
+        margin-right: 281px;
+        display: flex;
+        flex-direction: c;
+    }
+
 }
 
-.about-us--description {
-    text-align: left;
-    width: 443px;
-    height: 122px;
-}
 
-.about-us--article img{
-    width: 205px;
-    height:205px ;
-    border-radius:10px;
-    border: 5px solid var(--negro-8)  ;
-    
-}
-.about-us__right{
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: flex-start;
-
-
-} 
-.about-us__article--info{
-    margin-right: 281px; 
-    display: flex;
-    flex-direction: c;
-}
-
-}
-
-.footer {
-    width: 100%;
-    background-color: #fff;
-    border: 1px solid;
-    border-color: var(--cool-grey);
-    position: absolute;
-    bottom: -50px;    
-}
-*/seccion2 inicio*/
-.inicio {
+*/seccion2 inicio*/ .inicio {
     background-color: var(--blanco);
     width: 320px;
     height: 504px;
     padding: 30px 15px;
     display: flex;
-    flex-direction: column;  
+    flex-direction: column;
 }
 
 .titulo-inicio {
@@ -237,21 +245,25 @@
     text-align: center;
     margin: 10px;
     margin: 15px 0 0;
-    line-height: 1.5;  
+    line-height: 1.5;
 }
-.inicio-texto {  
+
+.inicio-texto {
     text-align: center;
 }
+
 /* SECTION 3: Fortalezas Debilidades*/
 
 .fort-deb {
     display: flex;
-    flex-flow: column wrap; /* Para tablet será row wrap */
+    flex-flow: column wrap;
+    /* Para tablet será row wrap */
     background-color: var(--cool-grey);
     text-align: center;
 }
 
-.fortalezas, .debilidades {
+.fortalezas,
+.debilidades {
     margin-top: 30px;
     margin-left: var(--margin);
     margin-right: var(--margin);
@@ -261,7 +273,8 @@
     margin-bottom: 45px;
 }
 
-.fortalezas__title, .debilidades__title {
+.fortalezas__title,
+.debilidades__title {
     font-size: 2.2rem;
     font-family: var(--primary-font);
     color: var(--brand_color);
@@ -269,7 +282,8 @@
     line-height: 2.05;
 }
 
-.fortalezas__content, .debilidades__content {
+.fortalezas__content,
+.debilidades__content {
     font-size: 1.6rem;
     font-family: var(--secondary-font);
     color: var(--gunmental);
@@ -286,7 +300,7 @@
 
 .about-us--title {
     width: 100%;
-    color:var(--brand_color);
+    color: var(--brand_color);
     font-size: 2.4rem;
     line-height: 4.5rem;
     font-family: 'Rubik', sans-serif;
@@ -295,41 +309,46 @@
     margin-bottom: 30px;
 
 }
-.about-us--article{
+
+.about-us--article {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.about-us--article img{
+.about-us--article img {
     width: 180px;
-    height:180px ;
-    border-radius:10px;
-    border: 5px solid var(--negro-8)  ;
+    height: 180px;
+    border-radius: 10px;
+    border: 5px solid var(--negro-8);
 
 }
-.about-us--info{
+
+.about-us--info {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+
 .about-us--name {
-    margin-top:15px;
-    color:var(--negro);
+    margin-top: 15px;
+    color: var(--negro);
     font-size: 2.0rem;
     line-height: 4.5rem;
     font-family: 'Open Sans', sans-serif;
     text-align: center;
 }
+
 .about-us--description {
     width: 290px;
     height: 200px;
     font-family: 'Open Sans', sans-serif;
-    color:var(--gunmental);
+    color: var(--gunmental);
     line-height: 2.4rem;
     font-size: 1.6rem;
     text-align: center;
 }
+
 .about-us--rrss {
     width: 124px;
     height: 30px;
@@ -343,49 +362,52 @@
 
 /* TABLET */
 @media screen and (min-width : 768px) {
-.about-us--article{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin-bottom: 67px;
-} 
+    .about-us--article {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        margin-bottom: 67px;
+    }
 
-.about-us--info{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    width: 205px;
-    height: 205px;
-    margin-left: 31px;
+    .about-us--info {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        width: 205px;
+        height: 205px;
+        margin-left: 31px;
+    }
+
+    .about-us--description {
+        text-align: left;
+        width: 443px;
+        height: 122px;
+    }
+
+    .about-us--article img {
+        width: 205px;
+        height: 205px;
+        border-radius: 10px;
+        border: 5px solid var(--negro-8);
+
+    }
+
+    .about-us__right {
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: flex-start;
+
+
+    }
+
+    .about-us__article--info {
+        margin-right: 281px;
+        display: flex;
+        flex-direction: c;
+    }
 }
 
-.about-us--description {
-    text-align: left;
-    width: 443px;
-    height: 122px;
-}
-
-.about-us--article img{
-    width: 205px;
-    height:205px ;
-    border-radius:10px;
-    border: 5px solid var(--negro-8)  ;
-    
-}
-.about-us__right{
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: flex-start;
-
-
-} 
-.about-us__article--info{
-    margin-right: 281px; 
-    display: flex;
-    flex-direction: c;
-}
-}
-
+/*FOOTER*/
 .footer {
     width: 100%;
     background-color: #fff;
@@ -393,4 +415,32 @@
     border-color: var(--cool-grey);
     position: absolute;
     bottom: -50px;
+}
+
+.nombre_grupo {
+    color: #b8b8b9;
+    font-size: 15px;
+    margin: 30px 74px;
+    font-weight: 500;
+    font-family: var(--secondary-font);
+}
+
+.lista_inferior {
+    color: var(--gunmental);
+    font-size: 14px;
+    text-align: center;
+    margin-top: 20px;
+    font-family: var(--primary-font);
+}
+
+li {
+    margin-bottom: 4px;
+}
+
+.image_logo {
+    height: 45px;
+    display: block;
+    margin: 0 auto;
+    margin-top: 30px;
+    margin-bottom: 45px;
 }
