--- a/css/style.css
+++ b/css/style.css
@@ -94,27 +94,38 @@
 }
 
 
-
-
-*/seccion2 inicio*/
+*seccion2 inicio*/
 .inicio {
     background-color: var(--blanco);
-    width: 320px;
-    height: 504px;
-    padding: 30px 15px;
-    display: flex;
-    flex-direction: column;  
+    justify-content: space-between;     
 }
 
-.titulo-inicio {
-    color: var(--brandsecundario_color);
+.titulo_inicio {
+    color: var(--brand_color);
     text-align: center;
-    margin: 10px;
-    margin: 15px 0 0;
-    line-height: 1.5;  
+    margin: var(--margin);
+    font-family: var(--primary-font);
+    font-size: 2.4rem;
+    line-height: 1.8;
+    padding-top: 15px;
+    
+    
 }
-.inicio-texto {  
+.inicio_texto {  
     text-align: center;
+    font-family: var(--secondary-font);
+    color: var(--gunmental);
+    margin: var(--margin);
+    font-size: 1.6rem;
+    font-style: normal;
+    padding-bottom: 15px;
+    
+       
+}
+
+.texto_equipo {
+    padding-bottom: 10px;
+    line-height: 1.5;
 }
 /* SECTION 3: Fortalezas Debilidades*/
 
@@ -440,4 +451,23 @@
     border-color: var(--cool-grey);
     position: absolute;
     bottom: -50px;
+}
+/*inicio*/
+.titulo_inicio{
+    margin-top: 45px;
+    padding-top: 0;
+}
+.inicio_texto{
+    margin-left: 45px;
+    margin-right: 45px;
+}
+
+
+/* DESKTOP */
+@media screen and (min-width : 1200px) {
+.inicio_texto{
+    margin-left: 300px;
+    margin-right: 300px;
+    margin-bottom: 60px;
+}
 }
