--- a/css/style.css
+++ b/css/style.css
@@ -22,24 +22,31 @@
 /* HEADER*/
 .header {
     background-color: var(--brand_color);
-    width: 100%;
+    
     height: 70px;
-    position: relative;
+    position: fixed;
+    top: 0;
     opacity: .9;
-}
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+
+} 
 
 .titulo {
     color: var(--blanco);
-    font-size: 16px;
-    width: 400px;
-    padding: 20px 80px 20px 80px;
+    font-size: 1.6rem;
+    /*width: 400px;*/
+    margin: 20px 80px 20px 80px;
+    /*padding: 20px 80px 20px 80px;*/
     font-family: var(--secondary-font);
     font-weight: 500;
+    text-align: center;
 }
 
 .navegacion {
     background-color: var(--brandsecundario_color);
-    width: 100%;
+    width: 100vw;
     height: 50px;
 }
 
@@ -47,10 +54,10 @@
     list-style: none;
     color: var(--blanco);
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     padding: 15px 10px 15px 10px;
     font-family: var(--secondary-font);
-    font-size: 15px;
+    font-size: 1.5rem;
 }
 
 /*HERO*/
@@ -69,16 +76,17 @@
     background-image: url(../imagenes/titanic.png);
     background-size: cover;
     background-repeat: no-repeat;
+    
 
 
 }
     
 
 .Lorem-ipsum {
-    width: 260px;
+    width: 290px;
     height: 80px;
-    font-family: OpenSans;
-    font-size: 1.125rem;
+    font-family: var(--secondary-font);
+    font-size: 1.8rem;
     font-weight: 600;
     font-stretch: normal;
     font-style: normal;
@@ -93,12 +101,15 @@
     display: inline-flex;
     justify-content: center;
     align-items: center;
+    padding: var(--margin);
+    
 
 
 }
 
 
 *seccion2 inicio*/
+
 .inicio {
     background-color: var(--blanco);
     justify-content: space-between;     
@@ -111,7 +122,7 @@
     font-family: var(--primary-font);
     font-size: 2.4rem;
     line-height: 1.8;
-    padding-top: 15px;
+    padding-top: 60px;
     
     
 }
@@ -135,7 +146,7 @@
 /* SECTION 3: Fortalezas Debilidades*/
 
 .fort-deb {
-    display: flex;
+    /*display: flex;*/
     flex-flow: column wrap; /* Para tablet será row wrap */
     align-items: center;
     background-color: var(--cool-grey);
@@ -148,12 +159,13 @@
     background-color: var(--blanco);
     transform: translateY(-15px) rotate(45deg);
 }
-
+/*
 .fortalezas, .debilidades {
-    margin-top: 30px;
+    margin-top: 0px;
     margin-left: var(--margin);
     margin-right: var(--margin);
 }
+
 
 .debilidades {
     margin-bottom: 45px;
@@ -187,13 +199,12 @@
 }
 
 .about-us--title {
-    width: 100%;
+    
     color: var(--brand_color);
     font-size: 2.4rem;
     line-height: 4.5rem;
     font-family: var(--primary-font);
-    text-align: center;
-    margin: 30px;
+    text-align: center;    
     margin-bottom: 30px;
 
 }
