--- a/css/style.css
+++ b/css/style.css
@@ -21,33 +21,34 @@
 
 /* HEADER*/
 .header {
-    background-color: var(--brand_color);
-    
+    background-color: var(--brand_color);  
     height: 70px;
+    width: 100vw;
     position: fixed;
     top: 0;
     opacity: .9;
     z-index: 2;
     display: flex;
+    justify-content: space-between;
     flex-direction: column;
 
 } 
 
 .titulo {
     color: var(--blanco);
-    font-size: 1.6rem;
-    /*width: 400px;*/
-    margin: 20px 80px 20px 80px;
-    /*padding: 20px 80px 20px 80px;*/
+    font-size: 1.5rem;
     font-family: var(--secondary-font);
-    font-weight: 500;
+    font-weight: 600;
     text-align: center;
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 
 .navegacion {
     background-color: var(--brandsecundario_color);
-    width: 100vw;
-    height: 50px;
+    font-weight: 600;
+    padding-top: 8px;
+    padding-bottom: 7px;
 }
 
 .lista_superior {
@@ -55,9 +56,32 @@
     color: var(--blanco);
     display: flex;
     justify-content: space-around;
-    padding: 15px 10px 15px 10px;
     font-family: var(--secondary-font);
     font-size: 1.5rem;
+}
+.lista_superior a {
+    text-decoration: none;
+    color: var(--blanco);
+}
+/*HEADER TABLET*/ 
+@media screen and (min-width : 768px){
+    .header {
+       flex-direction: row;
+       justify-content: space-between;
+       align-items: center;
+    }
+    .titulo {
+
+        margin-left: 45px;
+    }
+    .navegacion {
+        background: none;
+
+    }
+    .lista_superior {
+        gap: 10px;
+        margin-right: 45px;
+    }
 }
 
 /*HERO*/
@@ -67,7 +91,6 @@
     position: relative;
     display: inline;
     text-align: center;
-
    }
 
 .hero-content{
@@ -77,8 +100,6 @@
     background-size: cover;
     background-repeat: no-repeat;
     
-
-
 }
     
 
@@ -108,7 +129,7 @@
 }
 
 
-*seccion2 inicio*/
+/*seccion 2*/
 
 .inicio {
     background-color: var(--blanco);
@@ -158,8 +179,9 @@
     height: 30px;
     background-color: var(--blanco);
     transform: translateY(-15px) rotate(45deg);
+    margin: auto;
 }
-/*
+
 .fortalezas, .debilidades {
     margin-top: 0px;
     margin-left: var(--margin);
@@ -239,8 +261,8 @@
 }
 
 .about-us--description {
-    /* width: 290px;
-    height: 200px; */
+    width: 290px;
+    height: 200px; 
     font-family: var(--secondary-font);
     color:var(--gunmental);
     line-height: 2.4rem;
@@ -260,15 +282,15 @@
 
 
 /* TABLET */
-@media screen and (min-width : 768px) {
+@media screen and (min-width: 768px) {
 
-.about-us--article{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin-bottom: 67px;
-    margin-left: 45px;
-    margin-right: 45px;
+    .about-us--article {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        margin-bottom: 67px;
+        margin-left: 45px;
+        margin-right: 45px;
     }
 
     .about-us--info {
@@ -330,113 +352,6 @@
 
 .inicio-texto {
     text-align: center;
-}
-
-/* SECTION 3: Fortalezas Debilidades*/
-
-.fort-deb {
-    display: flex;
-    flex-flow: column wrap;
-    /* Para tablet será row wrap */
-    background-color: var(--cool-grey);
-    text-align: center;
-}
-
-.fortalezas,
-.debilidades {
-    margin-top: 30px;
-    margin-left: var(--margin);
-    margin-right: var(--margin);
-}
-
-.debilidades {
-    margin-bottom: 45px;
-}
-
-.fortalezas__title,
-.debilidades__title {
-    font-size: 2.2rem;
-    font-family: var(--primary-font);
-    color: var(--brand_color);
-    font-weight: 500;
-    line-height: 2.05;
-}
-
-.fortalezas__content,
-.debilidades__content {
-    font-size: 1.6rem;
-    font-family: var(--secondary-font);
-    color: var(--gunmental);
-    line-height: 1.5;
-}
-
-/* SECTION 4: Quienes somos */
-
-.about-us {
-    display: flex;
-    flex-direction: column;
-    height: auto;
-}
-
-.about-us--title {
-    width: 100%;
-    color: var(--brand_color);
-    font-size: 2.4rem;
-    line-height: 4.5rem;
-    font-family: 'Rubik', sans-serif;
-    text-align: center;
-    margin-top: 30px;
-    margin-bottom: 30px;
-
-}
-
-.about-us--article {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.about-us--article img {
-    width: 180px;
-    height: 180px;
-    border-radius: 10px;
-    border: 5px solid var(--negro-8);
-
-}
-
-.about-us--info {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.about-us--name {
-    margin-top: 15px;
-    color: var(--negro);
-    font-size: 2.0rem;
-    line-height: 4.5rem;
-    font-family: 'Open Sans', sans-serif;
-    text-align: center;
-}
-
-.about-us--description {
-    width: 290px;
-    height: 200px;
-    font-family: 'Open Sans', sans-serif;
-    color: var(--gunmental);
-    line-height: 2.4rem;
-    font-size: 1.6rem;
-    text-align: center;
-}
-
-.about-us--rrss {
-    width: 124px;
-    height: 30px;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    margin-top: 15px;
-    margin-bottom: 45px;
 }
 
 /*FOOTER*/
@@ -576,7 +491,27 @@ li {
     margin-bottom: 60px;
 }
 }
+/*FOOTER tablet*/
+@media screen and (min-width : 768px) {
+    footer {
+        height: 170px;
+    }
+    .nombre_grupo {
+        margin-bottom: 120px;
 
+    }
+    .lista_inferior {
+        text-align:end;
+        margin-right: 70px;
+        margin-left: 400px;
+        padding: 0;
+        list-style: none;
+    }
+    .image_logo {
+        display: flex;
+        align-self: flex-start;
 
+    }
+}
 
 
