add s-w scss and html

--- a/src/html/partials/s-w.html
+++ b/src/html/partials/s-w.html
@@ -1,24 +1,13 @@
-<section class="fort-deb">
-  <!-- MARIA -->
-  <div class="fort-deb__triangle"></div>
-  <div class="fortalezas">
-    <h3 class="fortalezas__title">Fortalezas</h3>
-    <p class="fortalezas__content">
-      Lorem ipsum dolor sit amet consectetur adipisicing
-      elit. Facere, pariatur a ea alias autem adipisci
-      quaerat praesentium nemo. At tempora voluptatem
-      tenetur repellendus nesciunt aut quidem laboriosam vel
-      culpa quo.
-    </p>
-  </div>
-  <div class="debilidades">
-    <h3 class="debilidades__title">Debilidades</h3>
-    <p class="debilidades__content">
-      Lorem ipsum dolor sit amet consectetur, adipisicing
-      elit. Obcaecati beatae nam sapiente esse quibusdam
-      unde earum quis voluptatum recusandae ab repudiandae
-      pariatur ullam labore, inventore accusamus in eum
-      ipsa. Sint.
-    </p>
-  </div>
-</section>
+<section class="s-w" id="s-w">
+        <div class="s-w__triangle"></div>
+        <div class="s-w__content">
+          <article class="strengths">
+            <h3 class="strengths__title">Fortalezas</h3>
+            <p class="strengths__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, pariatur a ea alias autem adipisci quaerat praesentium nemo. At tempora voluptatem tenetur repellendus nesciunt aut quidem laboriosam vel culpa quo.</p>
+          </article>
+          <article class="weaknesses">
+            <h3 class="weaknesses__title">Debilidades</h3>
+            <p class="weaknesses__content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati beatae nam sapiente esse quibusdam unde earum quis voluptatum recusandae ab repudiandae pariatur ullam labore, inventore accusamus in eum ipsa. Sint.</p>
+          </article>
+        </div>
+      </section>
