--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,12 +1,12 @@
 <header class="header">
-  <div class="title_div">
-    <h1 class="titulo">NOMBRE DEL GRUPO</h1>
+  <div class="header__content">
+    <h1 class="header__title">NOMBRE DEL GRUPO</h1>
   </div>
-  <nav class="navegacion">
-    <ul class="lista_superior">
-      <li><a href="">EQUIPO</a></li>
-      <li><a href="">QUIENES SOMOS</a></li>
-      <li><a href="">CONTACTO</a></li>
+  <nav class="nav__list">
+    <ul class="nav__list--content">
+      <li><a href="#team">EQUIPO</a></li>
+      <li><a href="#about-us">QUIENES SOMOS</a></li>
+      <li><a href="#contacto">CONTACTO</a></li>
     </ul>
   </nav>
 </header>
