add sass-Bem & desktop version

--- a/src/html/partials/about-us.html
+++ b/src/html/partials/about-us.html
@@ -1,200 +1,107 @@
 <section class="about-us">
-  <h2 class="about-us--title">QUIÉNES SOMOS</h2>
-  <article class="about-us--article">
-    <img
-      src="./imagenes/titanic.png"
-      alt="imagen perfil 0"
-    />
-    <div class="about-us--info">
-      <p class="about-us--name">Nombre 0</p>
-      <p class="about-us--description">
-        Lorem ipsum dolor sit amet consectetur adipisicing
-        elit. Pariatur quasi exercitationem commodi earum
-        veniam veritatis repellendus ad vitae, cupiditate
-        velit inventore voluptates expedita quibusdam vitae,
-        cupiditate velit inventore voluptates expedita
-        quibusdam iure.
+  <h2 class="about-us__title">QUIÉNES SOMOS</h2>
+  <article class="about-us__article">
+    <img src="./assets/images/titanic.png" alt="profile-Aida Blaya" />
+    <div class="about-us__info">
+      <p class="about-us__name">Aida Blaya</p>
+      <p class="about-us__description">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur quasi
+        exercitationem commodi earum veniam veritatis repellendus ad vitae,
+        cupiditate velit inventore voluptates expedita quibusdam vitae,
+        cupiditate velit inventore voluptates expedita quibusdam iure.
       </p>
-      <div class="about-us--rrss">
-        <i
-          class="fa-brands fa-twitter"
-          style="color: #099d8d"
-        ></i>
+      <div class="about-us__rrss">
+        <i class="fa-brands fa-twitter" style="color: #099d8d"></i>
         <span>·</span>
-        <i
-          class="fa-brands fa-linkedin-in"
-          style="color: #099d8d"
-        ></i>
+        <i class="fa-brands fa-linkedin-in" style="color: #099d8d"></i>
         <span>·</span>
-        <i
-          class="fa-brands fa-github-alt"
-          style="color: #099d8d"
-        ></i>
+        <i class="fa-brands fa-github-alt" style="color: #099d8d"></i>
         <span>·</span>
-        <i
-          class="fa-solid fa-envelope"
-          style="color: #099d8d"
-        ></i>
+        <i class="fa-solid fa-envelope" style="color: #099d8d"></i>
       </div>
     </div>
   </article>
-  <article class="about-us--article about-us__right">
-    <img
-      src="./imagenes/titanic.png"
-      alt="imagen perfil 1"
-    />
-    <div class="about-us--info about-us__right--info">
-      <p class="about-us--name about-us__right--name">
-        Nombre 1
+  <article class="about-us__article right">
+    <img src="./assets/images/titanic.png" alt="profile-Irene Talavera" />
+    <div class="about-us__info right">
+      <p class="about-us__name right">Irene Talavera</p>
+      <p class="about-us__description right">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur quasi
+        exercitationem commodi earum veniam veritatis repellendus ad vitae,
+        cupiditate velit inventore voluptates expedita quibusdam vitae,
+        cupiditate velit inventore voluptates expedita quibusdam iure.
       </p>
-      <p
-        class="about-us--description about-us__right--description"
-      >
-        Lorem ipsum dolor sit amet consectetur adipisicing
-        elit. Pariatur quasi exercitationem commodi earum
-        veniam veritatis repellendus ad vitae, cupiditate
-        velit inventore voluptates expedita quibusdam vitae,
-        cupiditate velit inventore voluptates expedita
-        quibusdam iure.
-      </p>
-      <div class="about-us--rrss">
-        <i
-          class="fa-brands fa-twitter"
-          style="color: #099d8d"
-        ></i>
+      <div class="about-us__rrss right">
+        <i class="fa-brands fa-twitter" style="color: #099d8d"></i>
         <span>·</span>
-        <i
-          class="fa-brands fa-linkedin-in"
-          style="color: #099d8d"
-        ></i>
+        <i class="fa-brands fa-linkedin-in" style="color: #099d8d"></i>
         <span>·</span>
-        <i
-          class="fa-brands fa-github-alt"
-          style="color: #099d8d"
-        ></i>
+        <i class="fa-brands fa-github-alt" style="color: #099d8d"></i>
         <span>·</span>
-        <i
-          class="fa-solid fa-envelope"
-          style="color: #099d8d"
-        ></i>
+        <i class="fa-solid fa-envelope" style="color: #099d8d"></i>
       </div>
     </div>
   </article>
-  <article class="about-us--article">
-    <img
-      src="./imagenes/titanic.png"
-      alt="imagen perfil 2"
-    />
-    <div class="about-us--info">
-      <p class="about-us--name">Nombre 2</p>
-      <p class="about-us--description">
-        Lorem ipsum dolor sit amet consectetur adipisicing
-        elit. Pariatur quasi exercitationem commodi earum
-        veniam veritatis repellendus ad vitae, cupiditate
-        velit inventore voluptates expedita quibusdam vitae,
-        cupiditate velit inventore voluptates expedita
-        quibusdam iure.
+  <article class="about-us__article">
+    <img src="./assets/images/titanic.png" alt="profile-Maria Sánchez" />
+    <div class="about-us__info">
+      <p class="about-us__name">Maria Sánchez</p>
+      <p class="about-us__description">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur quasi
+        exercitationem commodi earum veniam veritatis repellendus ad vitae,
+        cupiditate velit inventore voluptates expedita quibusdam vitae,
+        cupiditate velit inventore voluptates expedita quibusdam iure.
       </p>
-      <div class="about-us--rrss">
-        <i
-          class="fa-brands fa-twitter"
-          style="color: #099d8d"
-        ></i>
+      <div class="about-us__rrss">
+        <i class="fa-brands fa-twitter" style="color: #099d8d"></i>
         <span>·</span>
-        <i
-          class="fa-brands fa-linkedin-in"
-          style="color: #099d8d"
-        ></i>
+        <i class="fa-brands fa-linkedin-in" style="color: #099d8d"></i>
         <span>·</span>
-        <i
-          class="fa-brands fa-github-alt"
-          style="color: #099d8d"
-        ></i>
+        <i class="fa-brands fa-github-alt" style="color: #099d8d"></i>
         <span>·</span>
-        <i
-          class="fa-solid fa-envelope"
-          style="color: #099d8d"
-        ></i>
+        <i class="fa-solid fa-envelope" style="color: #099d8d"></i>
       </div>
     </div>
   </article>
-  <article class="about-us--article about-us__right">
-    <img
-      src="./imagenes/titanic.png"
-      alt="imagen perfil 3"
-    />
-    <div class="about-us--info about-us__right--info">
-      <p class="about-us--name about-us__right--name">
-        Nombre 3
+  <article class="about-us__article about-us__right">
+    <img src="./assets/images/titanic.png" alt="profile-Sara Osácar" />
+    <div class="about-us__info right">
+      <p class="about-us__name right">Sara Osácar</p>
+      <p class="about-us__description right">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur quasi
+        exercitationem commodi earum veniam veritatis repellendus ad vitae,
+        cupiditate velit inventore voluptates expedita quibusdam vitae,
+        cupiditate velit inventore voluptates expedita quibusdam iure.
       </p>
-      <p
-        class="about-us--description about-us__right--description"
-      >
-        Lorem ipsum dolor sit amet consectetur adipisicing
-        elit. Pariatur quasi exercitationem commodi earum
-        veniam veritatis repellendus ad vitae, cupiditate
-        velit inventore voluptates expedita quibusdam vitae,
-        cupiditate velit inventore voluptates expedita
-        quibusdam iure.
-      </p>
-      <div class="about-us--rrss">
-        <i
-          class="fa-brands fa-twitter"
-          style="color: #099d8d"
-        ></i>
+      <div class="about-us__rrss">
+        <i class="fa-brands fa-twitter" style="color: #099d8d"></i>
         <span>·</span>
-        <i
-          class="fa-brands fa-linkedin-in"
-          style="color: #099d8d"
-        ></i>
+        <i class="fa-brands fa-linkedin-in" style="color: #099d8d"></i>
         <span>·</span>
-        <i
-          class="fa-brands fa-github-alt"
-          style="color: #099d8d"
-        ></i>
+        <i class="fa-brands fa-github-alt" style="color: #099d8d"></i>
         <span>·</span>
-        <i
-          class="fa-solid fa-envelope"
-          style="color: #099d8d"
-        ></i>
+        <i class="fa-solid fa-envelope" style="color: #099d8d"></i>
       </div>
     </div>
   </article>
-  <article class="about-us--article">
-    <img
-      src="./imagenes/titanic.png"
-      alt="imagen perfil 4"
-    />
-    <div class="about-us--info">
-      <p class="about-us--name">Nombre 4</p>
-      <p class="about-us--description">
-        Lorem ipsum dolor sit amet consectetur adipisicing
-        elit. Pariatur quasi exercitationem commodi earum
-        veniam veritatis repellendus ad vitae, cupiditate
-        velit inventore voluptates expedita quibusdam vitae,
-        cupiditate velit inventore voluptates expedita
-        quibusdam iure.
+  <article class="about-us__article">
+    <img src="./assets/images/titanic.png" alt="profile-Lourdes Juárez" />
+    <div class="about-us__info">
+      <p class="about-us__name">Lourdes Juárez</p>
+      <p class="about-us__description">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur quasi
+        exercitationem commodi earum veniam veritatis repellendus ad vitae,
+        cupiditate velit inventore voluptates expedita quibusdam vitae,
+        cupiditate velit inventore voluptates expedita quibusdam iure.
       </p>
-      <div class="about-us--rrss">
-        <i
-          class="fa-brands fa-twitter"
-          style="color: #099d8d"
-        ></i>
+      <div class="about-us__rrss">
+        <i class="fa-brands fa-twitter" style="color: #099d8d"></i>
         <span>·</span>
-        <i
-          class="fa-brands fa-linkedin-in"
-          style="color: #099d8d"
-        ></i>
+        <i class="fa-brands fa-linkedin-in" style="color: #099d8d"></i>
         <span>·</span>
-        <i
-          class="fa-brands fa-github-alt"
-          style="color: #099d8d"
-        ></i>
+        <i class="fa-brands fa-github-alt" style="color: #099d8d"></i>
         <span>·</span>
-        <i
-          class="fa-solid fa-envelope"
-          style="color: #099d8d"
-        ></i>
+        <i class="fa-solid fa-envelope" style="color: #099d8d"></i>
       </div>
     </div>
   </article>
