--- a/src/scss/layout/_about-us.scss
+++ b/src/scss/layout/_about-us.scss
@@ -1,227 +1,119 @@
-/* SECTION 4: Quienes somos */
-
 .about-us {
-    display: flex;
-    flex-direction: column;
-    height: auto;
-    padding-left: var(--margin);
-    padding-right: var(--margin);
-}
+  display: flex;
+  flex-direction: column;
+  height: auto;
+  padding-left: $margin;
+  padding-right: $margin;
 
-.about-us--title {
-
-    color: var(--brand_color);
+  &__title {
+    margin-bottom: 30px;
+    text-align: center;
     font-size: 2.4rem;
     line-height: 4.5rem;
-    font-family: var(--primary-font);
-    text-align: center;
-    margin-bottom: 30px;
-
+    font-family: $primary-font;
+    color: $brand_color;
+  }
 }
 
-.about-us--article {
+.about-us__article {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.about-us__article img {
+  width: 180px;
+  height: 180px;
+  border-radius: 10px;
+  border: 5px solid $negro-8;
+}
+
+.about-us {
+  &__info {
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-.about-us--article img {
-    width: 180px;
-    height: 180px;
-    border-radius: 10px;
-    border: 5px solid var(--negro-8);
-
-}
-
-.about-us--info {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.about-us--name {
-    margin-top: 15px;
-    color: var(--negro);
-    font-size: 2.0rem;
+  }
+  &__name {
+    margin-top: $margin;
+    color: $negro;
+    font-size: 2rem;
     line-height: 4.5rem;
-    font-family: var(--secondary-font);
+    font-family: $secondary-font;
     text-align: center;
-}
-
-.about-us--description {
-    width: 290px;
-    height: 200px;
-    font-family: var(--secondary-font);
-    color: var(--gunmental);
+  }
+  &__description {
+    font-family: $secondary-font;
+    color: $gunmental;
     line-height: 2.4rem;
     font-size: 1.6rem;
     text-align: center;
+  }
 }
 
-.about-us--rrss {
-    width: 124px;
-    height: 30px;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    margin-top: 15px;
-    margin-bottom: 45px;
+.about-us__rrss {
+  width: 124px;
+  height: 30px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: $margin;
+  margin-bottom: 45px;
 }
-
 
 /* TABLET */
 @media screen and (min-width: 768px) {
-
-    .about-us--article {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        margin-bottom: 67px;
-        margin-left: 45px;
-        margin-right: 45px;
+  .about-us__article {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 67px;
+    margin-left: 45px;
+    margin-right: 45px;
+    &.right {
+      display: flex;
+      flex-direction: row-reverse;
+      justify-content: flex-start;
     }
+  }
 
-    .about-us--info {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        width: 205px;
-        height: 205px;
-        margin-left: 31px;
+  .about-us {
+    &__description {
+      text-align: left;
+      &.right {
+        text-align: right;
+      }
     }
-
-    .about-us--description {
-        text-align: left;
-        width: 443px;
-        height: 122px;
-    }
-
-    .about-us--article img {
-        width: 205px;
-        height: 205px;
-        border-radius: 10px;
-        border: 5px solid var(--negro-8);
-
-    }
-
-    .about-us__right {
-        display: flex;
-        flex-direction: row-reverse;
-        justify-content: flex-start;
-
-
-    }
-
-    .about-us__article--info {
-        margin-right: 281px;
-        display: flex;
-        flex-direction: c;
-    }
-
-}
-/* TABLET */
-@media screen and (min-width : 768px) {
-    .about-us--article {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        margin-bottom: 67px;
-    }
-
-    .about-us--info {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        width: 205px;
-        height: 205px;
-        margin-left: 31px;
-    }
-
-    .about-us--description {
-        text-align: left;
-        width: 443px;
-        height: 122px;
-    }
-
-    .about-us--article img {
-        width: 205px;
-        height: 205px;
-        border-radius: 10px;
-        border: 5px solid var(--negro-8);
-
-    }
-
-    .about-us__right {
-        display: flex;
-        flex-direction: row-reverse;
-        justify-content: flex-start;
-
-
-    }
-
-    .about-us__article--info {
-        margin-right: 281px;
-        display: flex;
-        flex-direction: c;
-    }
-
-    /* align-items: flex-start;
-    margin-left: 31px;
-} */
-
-    .about-us--description {
-        text-align: left;
-    }
-
-    .about-us--article img {
-        width: 205px;
-        height: 205px;
-        border-radius: 10px;
-        border: 5px solid var(--negro-8);
-    }
-
-    .about-us__right {
-        display: flex;
-        flex-direction: row-reverse;
-        justify-content: flex-start;
-    }
-
-    .about-us__right--info {
+    &__info {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      margin-left: 31px;
+      &.right {
         align-items: flex-end;
         margin-right: 31px;
+        margin-left: 0;
+      }
     }
+  }
 
-    .about-us__right--description {
-        text-align: right;
-    }
-
-    /*inicio*/
-    .titulo_inicio {
-        margin-top: 45px;
-        padding-top: 0;
-    }
-
-    .inicio_texto {
-        margin-left: 45px;
-        margin-right: 45px;
-    }
+  .about-us__article img {
+    width: 205px;
+    height: 205px;
+    border-radius: 10px;
+    border: 5px solid $negro-8;
+  }
 }
 
 /*DESKTOP*/
-@media screen and (min-width : 1200px) {
-    .about-us--article {
-        margin-left: 138px;
-        margin-right: 138px;
-    }
+@media screen and (min-width: 1200px) {
+  .about-us__article {
+    margin-left: 138px;
+    margin-right: 138px;
+  }
 
-    .about-us--article img {
-        width: 278px;
-        height: 278px;
-    }
-
-    .inicio_texto {
-        margin-left: 300px;
-        margin-right: 300px;
-        margin-bottom: 60px;
-    }
+  .about-us__article img {
+    width: 278px;
+    height: 278px;
+  }
 }
