add layout profile

--- a/src/html/partials/about-us.html
+++ b/src/html/partials/about-us.html
@@ -1,14 +1,11 @@
-<section class="about-us">
-  <h2 class="about-us__title">QUIÉNES SOMOS</h2>
-  <article class="about-us__article">
-    <img src="./assets/images/titanic.png" alt="profile-Aida Blaya" />
+<!-- <section class="about-us"> -->
+  <!-- <h2 class="about-us__title">QUIÉNES SOMOS</h2>-->
+  <article class="about-us__article @@className"> 
+    <img src="@@image" alt="@@alt" />
     <div class="about-us__info">
-      <p class="about-us__name">Aida Blaya</p>
+      <p class="about-us__name">@@name</p>
       <p class="about-us__description">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur quasi
-        exercitationem commodi earum veniam veritatis repellendus ad vitae,
-        cupiditate velit inventore voluptates expedita quibusdam vitae,
-        cupiditate velit inventore voluptates expedita quibusdam iure.
+        @@description
       </p>
       <div class="about-us__rrss">
         <i class="fa-brands fa-twitter" style="color: #099d8d"></i>
@@ -21,7 +18,7 @@
       </div>
     </div>
   </article>
-  <article class="about-us__article right">
+  <!-- <article class="about-us__article right">
     <img src="./assets/images/titanic.png" alt="profile-Irene Talavera" />
     <div class="about-us__info right">
       <p class="about-us__name right">Irene Talavera</p>
@@ -104,5 +101,5 @@
         <i class="fa-solid fa-envelope" style="color: #099d8d"></i>
       </div>
     </div>
-  </article>
-</section>
+  </article> -->
+<!-- </section> -->
