--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,12 +1,12 @@
 /*FOOTER*/
-.footer {
+/*.footer {
     width: 100%;
     background-color: $blanco;
     border: 1px solid;
     border-color: $cool-grey;
     position: absolute;
     bottom: -50px;
-}
+}*/
 
 .group__name {
     color: #b8b8b9;
@@ -39,25 +39,35 @@ li {
 @media screen and (min-width : 768px) {
     footer {
         height: 170px;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
     }
 
-    .group__name {
-        margin-bottom: 120px;
-
+    .footer__nav {
+        margin-top: 0;
+        grid-row: 1/3;
+        grid-column: 2/3;
     }
 
     .footer__nav--list {
         text-align: end;
-        margin-right: 70px;
-        margin-left: 400px;
+        gap: 7px;
         padding: 0;
         list-style: none;
+        display: flex;
+        flex-direction: column;
+        margin: 30px;
+        /*grid-column: 2/3;*/
+        /*margin-right: 70px;
+        margin-left: 400px;*/
     }
 
     .image_logo {
-        display: flex;
-        align-self: flex-start;
-
+        /*display: flex;
+        align-self: flex-start;*/
+        margin-top: 0;
+        margin-left: 60px; 
     }
 }
 
