--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -9,4 +9,6 @@
     $gunmental: #54585a;
     $primary-font: 'Rubik', sans-serif;
     $secondary-font: 'Open Sans', sans-serif;
-    
+
+/*variables team*/
+    $color-blue-green:#099d8d;
