--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -1,43 +1,63 @@
-/*HERO*/
 
 .hero {
     width: 100%;
     position: relative;
     display: inline;
     text-align: center;
+   
 }
 
 .hero-content {
     width: 100%;
     height: 90vh;
-    background-image: url(../imagenes/titanic.png);
+    background-image: url(../images/titanic.png);
     background-size: cover;
-    background-repeat: no-repeat;
-
+  
 }
-
 
 .Lorem-ipsum {
     width: 290px;
     height: 80px;
-    font-family: var(--secondary-font);
+    font-family: $secondary-font;
     font-size: 1.8rem;
     font-weight: 600;
     font-stretch: normal;
     font-style: normal;
     line-height: 1.39;
     letter-spacing: normal;
-    color: var(--negro);
+    color: $negro;
     position: absolute;
     bottom: 0;
     transform: translate(-50%, 50%);
     z-index: 1;
-    background-color: white;
+    background-color: $blanco;
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    padding: var(--margin);
+    margin: $margin; 
 
+}
 
+/*TABLET*/
+@media screen and (min-width: 768px) {
+
+.hero-content{
+    height: 421px;
+    width: 100%;
+}
+.Lorem-ipsum{
+    width: 442px;
+    height: 80px;
+    opacity: 0.8;
+    background-color: $blanco;
+    font-size: 20px;
+    transform: none;
+    text-align: start;
+    padding: 20px;
+    display: flex;
+    margin-left: 46px;
+    margin-right: 281px;
+
+}
 
 }
