fix changes index links

--- a/src/html/partials/about-us.html
+++ b/src/html/partials/about-us.html
@@ -1,4 +1,4 @@
-  <article class="about-us__article @@className"> 
+  <article class="about-us__article @@className" id="about-us"> 
     <img src="@@image" alt="@@alt" />
     <div class="about-us__info @@className">
       <p class="about-us__name @@className">@@name</p>
