--- a/src/scss/layout/_about-us.scss
+++ b/src/scss/layout/_about-us.scss
@@ -6,6 +6,7 @@
   padding-right: $margin;
 
   &__title {
+    margin-top: 45px;
     margin-bottom: 30px;
     text-align: center;
     font-size: 2.4rem;
