--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -6,7 +6,7 @@
     <ul class="nav__list--content">
       <li><a href="#team">EQUIPO</a></li>
       <li><a href="#about-us">QUIENES SOMOS</a></li>
-      <li><a href="#contacto">CONTACTO</a></li>
+      <li><a href="./contact.html">CONTACTO</a></li>
     </ul>
   </nav>
 </header>
