--- a/src/scss/components/_contact.scss
+++ b/src/scss/components/_contact.scss
@@ -1,7 +1,7 @@
 img {
     width: 100%;
 }
-
+/*estilos contacto*/
 .contact {
     display: flex;
     flex-direction: column;
@@ -33,3 +33,5 @@ img {
 
     }
 }
+
+
