--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -5,6 +5,7 @@
     $light-grey-blue: rgba(184, 184, 185, 0.1);
     $blanco: #fff;
     $cool-grey: rgba(184, 184, 185, 0.2);
+    $cool-grey-full-opacity:#b8b8b9;
     $negro-8: rgba(0, 0, 0, 0.08);
     $gunmental: #54585a;
     $primary-font: 'Rubik', sans-serif;
