add some styles to and content

--- a/src/html/partials/about-us.html
+++ b/src/html/partials/about-us.html
@@ -1,13 +1,11 @@
   <article class="about-us__article @@className" id="about-us"> 
     <img src="@@image" alt="@@alt" />
     <div class="about-us__info @@className">
-      <p class="about-us__name @@className">@@name</p>
+      <h3 class="about-us__name @@className">@@name</h3>
       <p class="about-us__description @@className">
         @@description
       </p>
       <div class="about-us__rrss @@className">
-        <i class="fa-brands fa-twitter" style="color: #099d8d"></i>
-        <span>·</span>
         <i class="fa-brands fa-linkedin-in" style="color: #099d8d"></i>
         <span>·</span>
         <i class="fa-brands fa-github-alt" style="color: #099d8d"></i>
