--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,10 +1,10 @@
 <footer>
-  <span class="group__name">Nombre del grupo 2023</span>
+  <small><span class="group__name">Nombre del grupo &copy;2023</span></small>
   <nav class="footer__nav">
     <ul class="footer__nav--list">
-      <li>EQUIPO</li>
-      <li>QUIÉNES SOMOS</li>
-      <li>CONTACTO</li>
+      <li><a href="#team">EQUIPO</a></li>
+      <li><a href="#about-us">QUIÉNES SOMOS</a></li>
+      <li><a href="../contact.html">CONTACTO</a></li>
     </ul>
   </nav>
   <img
