--- a/src/html/partials/hero.html
+++ b/src/html/partials/hero.html
@@ -1,8 +1,7 @@
 <section class="hero">
   <div class="hero-content">
     <span class="Lorem-ipsum"
-      >Lorem impsum dolor sit amet consectetur adipiscing
-      elit.</span
+      >Este es el camino</span
     >
   </div>
 </section>
