--- a/src/html/partials/s-w.html
+++ b/src/html/partials/s-w.html
@@ -3,11 +3,13 @@
         <div class="s-w__content">
           <article class="strengths">
             <h3 class="strengths__title">Fortalezas</h3>
-            <p class="strengths__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, pariatur a ea alias autem adipisci quaerat praesentium nemo. At tempora voluptatem tenetur repellendus nesciunt aut quidem laboriosam vel culpa quo.</p>
+            <p class="strengths__content">Estas cinco mujeres tienen muchas cosas en común, como su espíritu audaz, su dedicación al trabajo duro y su determinación por conseguir lo que se proponen.</p>
+            <p class="strengths__content">Además, la unión de diferentes conocimientos y experiencias serán clave para superar los desafíos que se presenten en su camino hacia la cima de la pirámide.</p>
           </article>
           <article class="weaknesses">
             <h3 class="weaknesses__title">Debilidades</h3>
-            <p class="weaknesses__content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati beatae nam sapiente esse quibusdam unde earum quis voluptatum recusandae ab repudiandae pariatur ullam labore, inventore accusamus in eum ipsa. Sint.</p>
+            <p class="weaknesses__content">Aunque su falta de experiencia sea su debilidad principal, a medida que avancen en su aventura, cada una aportará sus habilidades únicas al equipo, lo que les permitirá crecer y aprender juntas.</p>
+            <p class="weaknesses__content">Con el apoyo mutuo, estas exploradoras lograrán convertirse en unas full-stack developers excepcionales.</p>
           </article>
         </div>
       </section>
