--- a/src/html/partials/team.html
+++ b/src/html/partials/team.html
@@ -2,8 +2,7 @@
       <section class="team" id="team">
         <h2 class="team__title">EQUIPO</h2>
         <div class="team__container">
-          <p class="team__container--para">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
-          <p >Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
+          <p class="team__container--para">Este equipo está compuesto por cinco exploradoras que se encontraron por casualidad, pero todas comparten un mismo objetivo: descifrar el código full-stack y llegar a la cima de la pirámide. Allí, se encuentra el tesoro que todas desean obtener: el conocimiento y las habilidades necesarias para convertirse en programadoras exitosas.</p>
         </div>
         
       </section>
