--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -2,7 +2,7 @@
 .header {
     background-color: $brand_color;
     height: 70px;
-    width: 100vw;
+    width: 100%;
     position: fixed;
     top: 0;
     opacity: .9;
