--- a/src/scss/layout/_about-us.scss
+++ b/src/scss/layout/_about-us.scss
@@ -60,6 +60,9 @@
   align-items: center;
   margin-top: $margin;
   margin-bottom: 45px;
+  .fa-brands, .fa-solid {
+    font-size: 1.6rem;
+  }
 }
 
 /* TABLET */
